package ca.mcmaster.se2aa4.island.team45.drone;

public interface DirectionState {
    String getLeft();
    String getRight();
    String getDirection();
}